--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,12 @@
 	<version>1.0-SNAPSHOT</version>
 	<properties>
 		<spring.framework>4.3.0.RELEASE</spring.framework>
-		<postgres.version>42.1.4</postgres.version>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>${postgres.version}</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.13</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
