--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
-driver=org.postgresql.Driver
-url=jdbc:postgresql://127.0.0.1:5432/school
-dbuser=postgres
-dbpassword=postgres
+
+url=jdbc:mysql://localhost:3306/demo
+dbuser=root
+dbpassword=Adviksai55#
